[package]
name = "blog_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = {version = "4.4.3", features = ["derive"]}
include_dir = "0.7.3"
walkdir = "2.4.0"

[profile.release]
opt-level = "z"
lto = true
strip = true
