[package]
name = "blog_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
clap = {version = "4.4.3", features = ["derive"]}
colored = "2.0.4"
include_dir = "0.7.3"
walkdir = "2.4.0"
inquire = { version = "0.6.2", features = ["date", "editor"] }
markdown = "1.0.0-alpha.14"
toml_edit = "0.20.1"
serde = { version = "1.0.188", features = ["derive"] }

[profile.release]
opt-level = "z"
lto = true
#strip = true
